--- a/server/src/package.json
+++ b/server/src/package.json
@@ -1,11 +1,7 @@
 {
-  "dependencies": {
-    "express": "^4.18.2"
-  },
-  "name": "server",
+  "name": "src",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
